# benchmfc

./: .gitignore  README.md  pyproject.toml  requirements.txt
about/: download.md  issues.md
configs/: eval.yaml  train.yaml
configs/data/: bytes.yaml  ember.yaml
configs/experiment/: example.yaml  malconv-bytes-test.yaml  malconv-bytes-train.yaml  mlp-ember-test.yaml  mlp-ember-train.yaml
configs/hparams_search/: mnist_optuna.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/model/: malconv.yaml  mlp.yaml
detect/: mlp_ember.py
scripts/: detect_mlp_ember_drift.sh  run_gbdt_ember.sh  run_malconv_bytes.sh  run_mlp_ember.sh  test_gbdt_ember.sh  test_malconv_bytes.sh  test_mlp_ember.sh  test_mlp_ember_drift.sh  train_gbdt_ember.sh  train_malconv_bytes.sh  train_mlp_ember.sh
src/: eval.py  eval_gbdt.py  train.py  train_gbdt.py
src/datasets/: bytes.py  ember.py  mfc.py
src/models/: gbdt.py  malconv.py  malconv_module.py  mlp.py  mlp_module.py
src/utils/: __init__.py  rich_utils.py  utils.py
