[tool.poetry]
name = "lab-benchmc"
version = "0.1.0"
description = ""
authors = ["jyker@10.sjtu <jyk.kongkong@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "<3.10 >=3.9"
elasticsearch = "8.7.0"
rich = "^13.3.5"
typer = "^0.9.0"
pandas = "^2.0.3"
loguru = "^0.7.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "sjtu"
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
priority = "default"